# eruta

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README  Tupfile  eruta.c  eruta.kdev4  eruta_w.kateproject  premake4.lua  tup.config
cmake/: ErutaFiles.cmake  FindAllegro5.cmake  FindAllegro50.cmake  FindAllegro51.cmake  FindChipmunk.cmake  FindMruby.cmake  mingw32.cmake
data/: eruta.txt
data/image/: character_design_1.xcf  gimp_charidea2.xcf  gimp_shading.xcf
data/map/: map07_test.xml  map_0001.ra  map_0001.ra.try  map_0001.rak  map_0001.tmx  map_0001_64.tmx  map_0001_64_gz.tmx  map_0001_64_z.tmx  map_0002.ra  map_0002.tmx  objecttypes.xml  test6_map.xml  test_map.xml  tiles_village_1000.tsx  tryme_map.xml
data/model/: sprite_female.blend1
data/plot/: Eruta.celtx  eruta.lyx  eruta.mm  eruta_dice.ods  eruta_plot_outline.odt
data/script/: attack.rb  bitmap.rb  font.rb  forwardable.rb  graph.rb  helpers.rb  keycode.rb  load_me.rb  main.lua  main.rb  mainmenu.rb  music.rb  registry.rb  sample.rb  singleton.rb  sound.rb  sprite.rb  state.rb  store.rb  t.rb  thing.rb  tilemap.rb  timer.rb  tryleak.rb  zori.rb
data/sprite/: sprite_woman.xcf
doc/: Katawa_Shoujo_Review_And_Ponderings.html  PLAN  SCRIPTING  TODO  background.txt  characters.txt  colors.gnumeric  eruta_zori_ui_design.txt  lem.txt  pixelart_sizes.html  scripting.asciidoc
doc/chipmunk-6.1/: Chipmunk Game Dynamics Manual.html
doc/collision/: collision_1d.ggb  collision_ideas.ggb  collision_ideas_2.ggb  collision_ideas_3.ggb  collision_ideas_4.ggb  collision_ideas_5.ggb
doc/conlang/: genword.rb  word_candidates.txt  word_candidates_2.txt  word_candidates_3.txt  word_candidates_4.txt  word_international.txt  word_international_2.txt
doc/plot/: eruta.lyx  eruta.txt  eruta_dice.ods
doc/songs/: songs1.txt
ext/gari/: README  audio.c  cocomo.rb  color.c  draw.c  event.c  extconf.rb  font.c  gari.c  gari.h  gari_intern.h  gari_test.c  image.c  layer.c  particle.c  pixel.c  ruby.c  rubyhelp.h  save.c  sprite.c  style.c  test_gari.rb  vector.c
include/: .h  aline.h  alps.h  area.h  area_proto.h  bad.h  base64_proto.h  beo.h  beo_proto.h  bevec.h  bichan.h  brex.h  bstraux_proto.h  bstrlib_proto.h  bump.h  bumpshape.h  bxml.h  bxml_proto.h  bxmlparser.h  bxmlparser_proto.h  c-extensions.h  callrb.h  camera.h  camera_proto.h  camera_struct.h  castor.h  ch.h  ch_proto.h  cocell.h  collide.h  cs.h  cs_proto.h  draw.h  draw_proto.h  dynar.h  dynar_proto.h  effect_proto.h  eruta.h  event.h  event_proto.h  (+132 more)
include/bn/: BNArray.h  BNObject.h
include/eruta/: eruta.h  mode.h  program.h
include/gari/: gari.h  gari_intern.h  rubyhelp.h
include/gy/: gy.h  gy_intern.h  gy_time.h
include/raku/: raku_node.h  raku_token.h
include/re/: block.h  mem.h  string.h  wire.h
include/si/: si_array.h  si_block.h  si_cursor.h  si_io.h  (+8 more)
lib/: atto.rb  attobdd.rb  bump.rb  eruta.rb  fimyfi.rb  gariapp.rb  nanograph.rb  nofont.rb  raku.rb  renga.rb  tima.rb  tini.rb  yapae.rb  zori.rb
lib/gari/: CMakeCache.txt  CMakeLists.txt  Doxyfile  README  audio.c  camera.c  color.c  draw.c  event.c  extconf.rb  font.c  gari.c  gari.h  gari_intern.h  gari_spec.c  gari_test.c  image.c  layer.c  map.c  particle.c  pixel.c  rtcutl_spec.c  rtcutl_test.c  ruby.c  rubyhelp.h  script.c  sprite.c  start.rb  style.c  test_gari.rb  testing.h  tile.c
lib/gari/lua/: main.lua
lib/nori/: CMakeLists.txt  array.c  item.c  memory.c  nori.h  nori_intern.h  nori_test.c  rod.c  row.c  run.c  vm.c
lib/nori/cmake/: FindFFI.cmake
lib/raku/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  array.c  cmake_install.cmake  fail.rb  lexer.rb  ll.rb  memory.c  node.rb  parser.rb  raku.h  raku_test.c  rule.rb  string.c  testing.h  token.rb
lib/raku/Testing/Temporary/: CTestCostData.txt
lib/raku/doc/: .~lock.RakuDesign.odt#  RakuDesign.odt
objc/: objc_suppresions.supp
share/: eruta.conf
spec/: helper.rb  ring_spec.rb  zori_spec.rb
src/: .c  .project  AA_Rainbow_0.gpl.bak  BNObject.m  aline.c  alps.c  area.c  array.c  bad.c  base64.c  base64.h  beo.c  bevec.c  bichan.c  brex.c  bump.c  bumpshape.c  bxml.c  bxml2.c  bxmlparser.c  bxmlparser.rl  callrb.c  camera.c  castor.c  ch.c  cocell.c  collide.c  color.rb  coruge.rb  cs.c  draw.c  dynar.c  effect.c  eruma.rb  eruta.c  event.c  every.c  ezxml.c  fifi.c  filename.rb  (+80 more)
src/chipmunk/: CMakeLists.txt
src/gari/: CMakeLists.txt  Doxyfile  README  audio.c  bdf.c  camera.c  color.c  font.c  gari.c  layer.c  nofont.c  spec.h  test_bdf.c  time.c
src/gari/lib/gari/: event.rb  font.rb  mod.rb
test/: CMakeLists.txt  CTestTestfile.cmake  cmake_install.cmake  test_.c  test_BNDouble.m  test_area.c  test_bad.c  test_beo.c  test_bran.rb  test_brex.c  test_bump.c  test_bump.rb  test_bumpshape.c  test_bxml.c  test_bxmlparser.c  test_camera.c  test_castor.c  test_cocell.c  test_collide.c  test_color.rb  test_common.rb  test_cs.c  test_dichan.c  test_draw.c  test_dynar.c  test_event.c  test_ezxml.c  test_fifi.c  test_fimyfi.rb  test_flags.c  test_hatab.c  test_helper.rb  test_ifa.c  test_inli.c  test_intgrid.c  test_laytext.c  test_mode.c  test_monolog.c  test_nanograph.rb  test_nofont.rb  (+51 more)
test/atto/: test_test.rb
test/bran/: test_pool.rb
test/bump/: test_aline.rb  test_lookup.rb  test_thing.rb  try_aline.rb  try_box.rb
test/eruta/: CMakeLists.txt  test_program.c
test/gari/: CMakeLists.txt  gari_test.c  test_bdf.c  test_gari.rb  test_helper.rb
test/gy/: CMakeLists.txt  test_bdf.c
test/raku/: CMakeLists.txt  test_lexer.c  test_lexer.rb  test_ll.rb  test_node.c  test_node.rb  test_parser.c  test_parser.rb  test_rule.rb  test_token.c
test/re/: CMakeLists.txt  test_mem.c  test_wire.c
test/si/: CMakeLists.txt  test_array.c  test_block.c  test_io.c  test_lambda.c  test_list.c  test_mem.c  test_number.c  test_table.c  test_tree.c  test_wire.c
test/zori/: test_slider.rb  test_widget_helper.rb
tool/: dot_autotest
tool/src_old_2012_01_17/eruta/: CMakeLists.txt
zold/: bran.rb  gariapp.rb  hashargs.rb  nanograph.rb  nofont.rb  raku.rb  reblo.rb  timama.rb  tini.rb  zori.rb
(+644 files in other folders)
